--- a/package.json
+++ b/package.json
@@ -19,6 +19,9 @@
   "dependencies": {
     "body-parser": "^1.18.3",
     "express": "^4.16.4",
+    "mongoose": "^5.3.8",
+    "passport": "^0.4.0",
+    "passport-jwt": "^4.0.0",
     "request": "^2.88.0"
   }
 }
